// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tablink renders 1`] = `
<a
  className="sc-kvczt hNkgUR"
/>
`;

exports[`Tablink renders Href 1`] = `
<a
  className="sc-kvczt hNkgUR"
  href="www.google.com"
/>
`;

exports[`Tablink renders count 1`] = `
<a
  className="sc-kvczt hNkgUR"
>
  <span
    className="sc-kwilob hBPpuB"
  >
    2
  </span>
</a>
`;

exports[`Tablink renders element left 1`] = `
<a
  className="sc-kvczt hNkgUR"
>
  <div
    className="sc-iFHmoU iExJQy"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`Tablink renders isTop 1`] = `
<a
  className="sc-kvczt fRTelM"
/>
`;

exports[`Tablink renders size 1`] = `
<a
  className="sc-kvczt gBXWZQ"
  size="small"
/>
`;
